fixed missing line breaks in pre content and update pdf

--- a/cheatsheet/styles/main.css
+++ b/cheatsheet/styles/main.css
@@ -1,106 +1,95 @@
-body,
-html {
-    margin: 0;
-    font-family: arial;
+body, html {
+  margin: 0;
+  font-family: arial;
 }
-
 #content {
-    margin: 10px;
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-gap: 30px;
-    -moz-column-gap: 30px;
-    column-gap: 30px;
+  margin: 10px;
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-gap: 30px;
+  -moz-column-gap: 30px;
+  column-gap: 30px;
 }
-
-h1,
-h2,
-h3 {
-    margin: 20px 0 10px;
-    padding: 2px;
-    display: block;
-    width: 100%;
-    color: white;
-    background: #515964;
-    font-size: 18px;
-    text-transform: uppercase;
+h1, h2, h3 {
+  margin: 20px 0 10px;
+  padding: 2px;
+  display: block;
+  width: 100%;
+  color: white;
+  background: #515964;
+  font-size: 18px;
+  text-transform: uppercase;
 }
 h1:first-of-type {
-    margin-top: 0;
+  margin-top: 0;
 }
-
 h3 {
-    background: #3023E8;
+  background: #3023E8;
 }
-
 h4 {
-    margin-bottom: 6px;
+  margin-bottom: 6px;
 }
-
 code {
-    background: #FFF5CE;
-    padding: 2px 4px;
-    margin: 0 0 5px;
-    font-size: 16px;
-    color: #707B89;
+  background: #FFF5CE;
+  padding: 2px 4px;
+  margin: 0 0 5px;
+  font-size: 16px;
+  color: #707B89;
 }
-
 pre {
-    margin: 0;
+  margin: 0;
+  white-space: pre-wrap;
+  /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
 }
-
-pre > code {
-    display: block;
-    width: 100%;
+pre> code {
+  display: block;
+  width: 100%;
 }
-
 p {
-    margin: 1px 0 10px;
-    font-size: 14px;
+  margin: 1px 0 10px;
+  font-size: 14px;
 }
-
-li > strong {
-    font-weight: bold;
-    display: block;
-    padding: 5px;
-    text-align: left;
-    width: 100%;
-    background: #C9391E;
-    color: white;
+li> strong {
+  font-weight: bold;
+  display: block;
+  padding: 5px;
+  text-align: left;
+  width: 100%;
+  background: #C9391E;
+  color: white;
 }
-
-ol,
+ol, ul {
+  margin: 0;
+}
 ul {
-    margin: 0;
+  padding: 0 0 15px;
 }
-
-ul {
-    padding: 0 0 15px;
+ul> li {
+  list-style-type: none;
 }
-
-ul > li {
-    list-style-type: none;
-}
-
 ol {
-    padding-left: 26px;
+  padding-left: 26px;
 }
-
-ol > li {
-    margin: 6px 0;
+ol> li {
+  margin: 6px 0;
 }
 @media print {
-    body {
-        -webkit-print-color-adjust: exact;
-    }
+  body {
+    -webkit-print-color-adjust: exact;
+  }
 }
-
-#content.alias h4
-{
-    margin-top: 0;
+#content.alias h4 {
+  margin-top: 0;
 }
-#content.alias p
-{
-    padding-bottom: 8px;
+#content.alias p {
+  padding-bottom: 8px;
 }
